--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
-BD_URL=localhost
+BD_URL=database
 BD_NAME=bd_yofio
 BD_PORT=5432
 BD_USER_NAME=jesus
 BD_USER_PASSWORD=admin
+
+POSTGRES_USER=jesus
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=bd_yofio
 
 # para produccion poner puerto:80
 DEBUG=TRUE
